# chiBI

./: .gitignore  README.md  chiBI.code-workspace  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/utils/: graphql_context.rs  graphql_schema.rs
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
