[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
async-graphql = "7.0.13"
async-graphql-actix-web = "7.0.13"
diesel = { version = "1.4.8", features = ["mysql"] }
env_logger = "0.11.5"
log = "0.4.22"